.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: todoapp
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ingress-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: todoapp
spec:
  selector:
    app: todoapp
  ports:
  - port: 80
    targetPort: 8080
